--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           push: true
           tags: endocker299/data-provider:latest
-          file: backend/Dockerfile
+          file: Dockerfile
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
